// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple-routes build and serve should generate the expected files 1`] = `
{
  "5.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "5.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "AsyncComponent.chunk.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "AsyncComponent.chunk.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details-da8170bc219649c692b1.css": .EOTSBbL {
  color: blue;
}

/*# sourceMappingURL=handlers-Details-da8170bc219649c692b1.css.map*/
,
  "handlers-Details-da8170bc219649c692b1.css.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details.chunk.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details.chunk.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Home-6c08fa51d0f7685d7b77.css": .dyLY_sb {
  color: red;
}

/*# sourceMappingURL=handlers-Home-6c08fa51d0f7685d7b77.css.map*/
,
  "handlers-Home-6c08fa51d0f7685d7b77.css.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Home.chunk.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Home.chunk.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "production/au/details/$id/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime.js",
    "/static/place/5.js",
    "/static/place/main.js",
    "/static/place/handlers-Details.chunk.js",
    "/static/place/AsyncComponent.chunk.js",
  ]
CSS: [
    "/static/place/handlers-Details-da8170bc219649c692b1.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Details"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Details"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
    <link
      data-chunk="AsyncComponent"
      rel="preload"
      as="script"
      href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="EOTSBbL">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [1,0]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Details"
      src="scripts[4]"
    >
    </script>
    <script
      async
      data-chunk="AsyncComponent"
      src="scripts[5]"
    >
    </script>
  </body>
</html>,
  "production/au/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime.js",
    "/static/place/5.js",
    "/static/place/main.js",
    "/static/place/handlers-Home.chunk.js",
  ]
CSS: [
    "/static/place/handlers-Home-6c08fa51d0f7685d7b77.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Home"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Home"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="dyLY_sb">
        Welcome to the Home page - au
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [2]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Home"
      src="scripts[4]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/details/:id/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime.js",
    "/static/place/5.js",
    "/static/place/main.js",
    "/static/place/handlers-Details.chunk.js",
    "/static/place/AsyncComponent.chunk.js",
  ]
CSS: [
    "/static/place/handlers-Details-da8170bc219649c692b1.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Details"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Details"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
    <link
      data-chunk="AsyncComponent"
      rel="preload"
      as="script"
      href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="EOTSBbL">
        Welcome to the Details page - nz
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"nz"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [1,0]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Details"
      src="scripts[4]"
    >
    </script>
    <script
      async
      data-chunk="AsyncComponent"
      src="scripts[5]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime.js",
    "/static/place/5.js",
    "/static/place/main.js",
    "/static/place/handlers-Home.chunk.js",
  ]
CSS: [
    "/static/place/handlers-Home-6c08fa51d0f7685d7b77.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Home"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Home"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="dyLY_sb">
        Welcome to the Home page - nz
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"nz"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [2]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Home"
      src="scripts[4]"
    >
    </script>
  </body>
</html>,
  "runtime.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`multiple-routes build and serve should return details page 1`] = `
SCRIPTS: [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/static/place/runtime.js",
  "/static/place/5.js",
  "/static/place/main.js",
  "/static/place/handlers-Details.chunk.js",
  "/static/place/AsyncComponent.chunk.js",
]
CSS: [
  "/static/place/handlers-Details-da8170bc219649c692b1.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Details"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Details"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
    <link
      data-chunk="AsyncComponent"
      rel="preload"
      as="script"
      href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="EOTSBbL">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [1,0]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Details"
      src="scripts[4]"
    >
    </script>
    <script
      async
      data-chunk="AsyncComponent"
      src="scripts[5]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
   <body>
     <div id="app">
       <h1 class="EOTSBbL">
-        Welcome to the Details page - au
+        Welcome to the Details page - auID: 123
         <span>
           Some special async content
         </span>

`;

exports[`multiple-routes build and serve should return home page 1`] = `
SCRIPTS: [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/static/place/runtime.js",
  "/static/place/5.js",
  "/static/place/main.js",
  "/static/place/handlers-Home.chunk.js",
]
CSS: [
  "/static/place/handlers-Home-6c08fa51d0f7685d7b77.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Home"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Home"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="dyLY_sb">
        Welcome to the Home page - au
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [2]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Home"
      src="scripts[4]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`multiple-routes start should render details page correctly 1`] = `
SCRIPTS: [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/runtime.js",
  "/5.js",
  "/main.js",
  "/handlers-Details.js",
  "/AsyncComponent.js",
]
CSS: [
  "/handlers-Details.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=' 'unsafe-eval';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Details"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Details"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
    <link
      data-chunk="AsyncComponent"
      rel="preload"
      as="script"
      href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="Details__root___EOTSBbL">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [1,0]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Details"
      src="scripts[4]"
    >
    </script>
    <script
      async
      data-chunk="AsyncComponent"
      src="scripts[5]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
   <body>
     <div id="app">
       <h1 class="Details__root___EOTSBbL">
-        Welcome to the Details page - au
+        Welcome to the Details page - auID: 123
         <span>
           Some special async content
         </span>

`;

exports[`multiple-routes start should render home page correctly 1`] = `
SCRIPTS: [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/runtime.js",
  "/5.js",
  "/main.js",
  "/handlers-Home.js",
]
CSS: [
  "/handlers-Home.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=' 'unsafe-eval';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Home"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Home"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="Home__root___dyLY_sb">
        Welcome to the Home page - au
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [2]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Home"
      src="scripts[4]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;
